--- a/styles/style.scss
+++ b/styles/style.scss
@@ -110,6 +110,10 @@ header {
     font-weight: 500;
     cursor: pointer;
   }
+  h1, .mode {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
 
 .navbar {
@@ -188,6 +192,11 @@ footer {
 
 .movies {
   background-color: $contrast-10;
+  img {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .card, .card-body, .card-footer, .card-header {
     border-color: $background;
   }
@@ -263,7 +272,7 @@ footer {
           bottom: 0;
           left: 0;
           right: 0;
-          background-color: rgba(0,0,0,.8);
+          background-color: rgba(calc(255 - #{$bw-01}),calc(255 - #{$bw-01}),calc(255 - #{$bw-01}),.7);
         }
       }
       .carousel-caption  {
@@ -277,6 +286,11 @@ footer {
         }
         p {
           font-size: 1rem;
+        }
+      }
+      @media (max-width: 767px) {
+        .carousel-caption {
+          align-items: center;
         }
       }
     }
